<resources>
    <string name="app_name">Stocks app</string>
    <string name="currency_ru" translatable="false">%.2f ₽</string>
    <string name="currency_eng" translatable="false">$%.2f</string>
    <string name="delta_ru" translatable="false">%.2f₽ (%.2f%%)</string>
    <string name="delta_eng" translatable="false">$%.2f (%.2f%%)</string>
    <string name="tv_stocks_text">Stocks</string>
    <string name="tv_favourite_text">Favourite</string>
    <string name="search_hint">Find company or ticker</string>
    <string name="tv_popular_requests_text">Popular requests</string>
    <string name="tv_recently_searched_text">You’ve searched for this</string>
    <string name="tv_no_connection_error_text">Something went wrong. Please, check your connection and try again</string>
    <string name="tv_searched_placeholder_text">Start typing in a search bar to find a stock</string>
    <string name="tv_searched_empty_result_text">No results matching your query</string>
    <string name="tv_searched_error_unknown_text">Unexpected error while trying to fetch stock!</string>
    <string name="tab_chart">Chart</string>
    <string name="tab_news">News</string>
    <string name="chart_scale_d">D</string>
    <string name="chart_scale_w">W</string>
    <string name="chart_scale_m">M</string>
    <string name="chart_scale_6m">6M</string>
    <string name="chart_scale_1y">1Y</string>
    <string name="chart_scale_all">All</string>
    <string name="btn_buy_text">Buy for %s</string>
    <string name="tab_summary">Summary</string>
    <string name="btn_retry_text">Retry</string>
    <string name="no_results">No results 😓</string>
    <string name="current_ratio">Current ratio</string>
    <string name="current_ratio_disc">Current ratio</string>
    <string name="pe_ratio" translatable="false">P/E</string>
    <string name="pe_ratio_disc">Price/Earnings</string>
    <string name="price_to_sales_ratio" translatable="false">P/S</string>
    <string name="price_to_sales_ratio_disc">Price/Sales</string>
    <string name="price_book_value_ratio" translatable="false">P/BV</string>
    <string name="price_book_value_ratio_disc">Price/Book Value</string>
    <string name="dividend_per_share">Dividends</string>
    <string name="dividend_per_share_disc">Dividends per share</string>

</resources>